layout bug fixes

--- a/src/Vitoop/InfomgmtBundle/Resources/public/css/cupertino/jquery-ui-1.10.4.custom.css
+++ b/src/Vitoop/InfomgmtBundle/Resources/public/css/cupertino/jquery-ui-1.10.4.custom.css
@@ -61,6 +61,10 @@
     z-index: 100;
 }
 
+ul.ui-front.ui-autocomplete {
+    z-index: 120;
+}
+
 /* Interaction Cues
 ----------------------------------*/
 .ui-state-disabled {
